--- a/assignment01/package.json
+++ b/assignment01/package.json
@@ -31,6 +31,8 @@
     "react-native-mmkv": "^2.10.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.13.0",
+    "victory-native": "^36.6.11",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
