--- a/assignment01/package.json
+++ b/assignment01/package.json
@@ -14,6 +14,7 @@
     "@gluestack-style/react": "^0.2.38",
     "@gluestack-ui/themed": "^0.1.33",
     "@gluestack-ui/utils": "^0.1.9",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.9",
     "expo-crypto": "^12.4.1",
