--- a/assignment01/package.json
+++ b/assignment01/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "^2.10.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.13.0",
