--- a/assignment01/package.json
+++ b/assignment01/package.json
@@ -14,6 +14,7 @@
     "@gluestack-style/react": "^0.2.38",
     "@gluestack-ui/themed": "^0.1.33",
     "@gluestack-ui/utils": "^0.1.9",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.9",
@@ -29,7 +30,6 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-mmkv": "^2.10.2",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
