--- a/assignment01/package.json
+++ b/assignment01/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/native": "^6.0.2",
+    "dayjs": "^1.11.9",
     "expo": "~49.0.9",
     "expo-crypto": "^12.4.1",
     "expo-font": "~11.4.0",
