--- a/assignment02/package.json
+++ b/assignment02/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
-    "@gluestack-style/animation-plugin": "^0.1.7",
-    "@gluestack-style/react": "^0.2.8",
-    "@gluestack-ui/themed": "^0.1.9",
-    "@gluestack-ui/utils": "^0.1.8",
+    "@gluestack-style/animation-plugin": "^0.1.12",
+    "@gluestack-style/react": "^0.2.51",
+    "@gluestack-ui/themed": "^0.1.53",
+    "@gluestack-ui/utils": "^0.1.9",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.9",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.5",
+    "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -27,9 +28,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-mmkv": "^2.10.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
