--- a/assignment02/package.json
+++ b/assignment02/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/themed": "^0.1.53",
     "@gluestack-ui/utils": "^0.1.9",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.9",
     "expo-font": "~11.4.0",
@@ -29,6 +30,7 @@
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
