--- a/assignment02/package.json
+++ b/assignment02/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
-    "@gluestack-style/animation-plugin": "^0.1.12",
-    "@gluestack-style/react": "^0.2.51",
-    "@gluestack-ui/themed": "^0.1.53",
-    "@gluestack-ui/utils": "^0.1.9",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/animations-react-native": "^1.61.3",
+    "@tamagui/babel-plugin": "^1.61.3",
+    "@tamagui/config": "^1.61.3",
+    "@tamagui/lucide-icons": "^1.61.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.9",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -24,16 +25,16 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
-    "lucide-react-native": "^0.268.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "tamagui": "^1.61.3",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
